# souls-client

./: .gitignore  Cargo.toml  LICENSE  README.md
binary-mapper/: ds1r.toml  ds3.toml  eldenring.toml  run.sh  sekiro.toml
inject/: Cargo.toml  main.rs
src/: bosses.rs  client.rs  deathlink.rs  event.rs  game.rs  hooks.rs  items.rs  lib.rs  logger.rs  names.rs  program.rs  rva.rs  spawn.rs  ui.rs
src/bosses/: bosses.json
src/event/: emedf.rs  emevd_utils.rs  emk_system.rs
src/hooks/: install.rs
src/items/: data.rs  equip.rs
src/names/: hooks.rs  name_templates.rs
src/rva/: ds1r.rs  ds3.rs  eldenring.rs  sekiro.rs
src/spawn/: arenas.rs
